# dipho

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
crates/dipho/: Cargo.toml
crates/dipho-core/: Cargo.toml
crates/dipho-core/src/: corpus.rs  dsp.rs  edl.rs  lib.rs  span.rs
crates/dipho-core/src/corpus/: diphones.rs  features.rs  loader.rs  manifest.rs  mod.rs  normalize.rs  npz.rs  phones.rs  schema.rs  search.rs  speakers.rs
crates/dipho-core/src/edl/: compile.rs  mod.rs  rebind.rs  render.rs
crates/dipho/src/: main.rs  mpv.rs  render.rs  search.rs  tui.rs
crates/dipho/src/ingest/: mod.rs  normalize.rs  origin.rs  probe.rs  sidecar.rs
crates/dipho/src/tui/: app.rs  db.rs  edit.rs  event.rs  mod.rs  player.rs  ui.rs
docs/: ROADMAP.md
docs/research/: 01-sentence-mixing.md  02-videogrep.md  03-mpv.md  04-alignment-stack.md  05-ratatui.md  SUMMARY.md
python/: README.md  pyproject.toml
python/src/dipho_ingest/: __init__.py  chunks.py  cli.py  diarize.py  manifest.py  mfa.py  normalize.py  progress.py  prosody.py  stages.py  transcribe.py  words.py
