[project]
name = "dipho-ingest"
version = "0.1.0"
description = "Batch ingest sidecar for dipho: media in, alignment/diarization/features JSON out"
requires-python = ">=3.12"
dependencies = [
    # MFA (phone alignment, english_us_arpa) is NOT a Python dep: CLI
    # subprocess in its own micromamba env. Sole aligner — no fallback.
    "librosa>=0.11.0",
    "mlx-whisper>=0.4.3",
    "num2words>=0.5.14",
    "praatio>=6.2.2",
    "pyannote-audio>=4.0.4",
    "whisperx>=3.8.6",
]

[project.scripts]
dipho-ingest = "dipho_ingest.cli:main"

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"
