[package]
name = "dipho-core"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
zip = { version = "8.6.0", default-features = false }
